--- a/game.html
+++ b/game.html
@@ -19,13 +19,10 @@
         var canvas = document.getElementById("myCanvas");
         var ctx = canvas.getContext("2d");
         var ballRadius = 10;
-        var x = canvas.width / 2;
-        var y = canvas.height - 30;
-        var dx = 2;
-        var dy = -2;
+        var x, y, dx, dy;
         var paddleHeight = 10;
         var paddleWidth = 75;
-        var paddleX = (canvas.width - paddleWidth) / 2;
+        var paddleX;
         var rightPressed = false;
         var leftPressed = false;
         var brickRowCount = 3;
@@ -35,13 +32,22 @@
         var brickPadding = 10;
         var brickOffsetTop = 30;
         var brickOffsetLeft = 30;
-        var score = 0;
+        var score;
+        var bricks;
 
-        var bricks = [];
-        for(var c = 0; c < brickColumnCount; c++) {
-            bricks[c] = [];
-            for(var r = 0; r < brickRowCount; r++) {
-                bricks[c][r] = { x: 0, y: 0, status: 1 };
+        function init() {
+            x = canvas.width / 2;
+            y = canvas.height - 30;
+            dx = 2;
+            dy = -2;
+            paddleX = (canvas.width - paddleWidth) / 2;
+            score = 0;
+            bricks = [];
+            for (var c = 0; c < brickColumnCount; c++) {
+                bricks[c] = [];
+                for (var r = 0; r < brickRowCount; r++) {
+                    bricks[c][r] = { x: 0, y: 0, status: 1 };
+                }
             }
         }
 
@@ -49,33 +55,31 @@
         document.addEventListener("keyup", keyUpHandler, false);
 
         function keyDownHandler(e) {
-            if(e.key == "Right" || e.key == "ArrowRight") {
+            if (e.key == "Right" || e.key == "ArrowRight") {
                 rightPressed = true;
-            }
-            else if(e.key == "Left" || e.key == "ArrowLeft") {
+            } else if (e.key == "Left" || e.key == "ArrowLeft") {
                 leftPressed = true;
             }
         }
 
         function keyUpHandler(e) {
-            if(e.key == "Right" || e.key == "ArrowRight") {
+            if (e.key == "Right" || e.key == "ArrowRight") {
                 rightPressed = false;
-            }
-            else if(e.key == "Left" || e.key == "ArrowLeft") {
+            } else if (e.key == "Left" || e.key == "ArrowLeft") {
                 leftPressed = false;
             }
         }
 
         function collisionDetection() {
-            for(var c = 0; c < brickColumnCount; c++) {
-                for(var r = 0; r < brickRowCount; r++) {
+            for (var c = 0; c < brickColumnCount; c++) {
+                for (var r = 0; r < brickRowCount; r++) {
                     var b = bricks[c][r];
-                    if(b.status == 1) {
-                        if(x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
+                    if (b.status == 1) {
+                        if (x > b.x && x < b.x + brickWidth && y > b.y && y < b.y + brickHeight) {
                             dy = -dy;
                             b.status = 0;
                             score++;
-                            if(score == brickRowCount * brickColumnCount) {
+                            if (score == brickRowCount * brickColumnCount) {
                                 alert("おめでとうございます！ あなたの勝ちです！");
                                 document.location.reload();
                             }
@@ -102,9 +106,9 @@
         }
 
         function drawBricks() {
-            for(var c = 0; c < brickColumnCount; c++) {
-                for(var r = 0; r < brickRowCount; r++) {
-                    if(bricks[c][r].status == 1) {
+            for (var c = 0; c < brickColumnCount; c++) {
+                for (var r = 0; r < brickRowCount; r++) {
+                    if (bricks[c][r].status == 1) {
                         var brickX = (c * (brickWidth + brickPadding)) + brickOffsetLeft;
                         var brickY = (r * (brickHeight + brickPadding)) + brickOffsetTop;
                         bricks[c][r].x = brickX;
@@ -133,25 +137,23 @@
             drawScore();
             collisionDetection();
 
-            if(x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
+            if (x + dx > canvas.width - ballRadius || x + dx < ballRadius) {
                 dx = -dx;
             }
-            if(y + dy < ballRadius) {
+            if (y + dy < ballRadius) {
                 dy = -dy;
-            } else if(y + dy > canvas.height - ballRadius) {
-                if(x > paddleX && x < paddleX + paddleWidth) {
+            } else if (y + dy > canvas.height - ballRadius) {
+                if (x > paddleX && x < paddleX + paddleWidth) {
                     dy = -dy;
-                }
-                else {
+                } else {
                     alert("ゲームオーバー");
-                    document.location.reload();
+                    init(); // ゲームを初期化
                 }
             }
 
-            if(rightPressed && paddleX < canvas.width - paddleWidth) {
+            if (rightPressed && paddleX < canvas.width - paddleWidth) {
                 paddleX += 7;
-            }
-            else if(leftPressed && paddleX > 0) {
+            } else if (leftPressed && paddleX > 0) {
                 paddleX -= 7;
             }
 
@@ -160,7 +162,8 @@
             requestAnimationFrame(draw);
         }
 
-        draw();
+        init(); // ゲームの初期化
+        draw(); // ゲームの描画開始
     </script>
 </body>
 </html>
