--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="シンプルなブラウザゲームで暇つぶしを。ブロックくずしゲームで楽しもう！">
     <title>暇つぶしゲーム</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="V_pG5Uqfmwc44h7g6EyyvBpVeOOiIIsiAFAUEyKFVFo" />
 </head>
 <body>
     <header>
