--- a/game.html
+++ b/game.html
@@ -10,6 +10,8 @@
             margin: 0 auto;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>ブロック崩しゲーム</h1>
