--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>暇つぶしゲーム</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="V_pG5Uqfmwc44h7g6EyyvBpVeOOiIIsiAFAUEyKFVFo" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
