--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     <title>暇つぶしゲーム</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="V_pG5Uqfmwc44h7g6EyyvBpVeOOiIIsiAFAUEyKFVFo" />
-　　　　　　　　<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
-     crossorigin="anonymous"></script>
+　　　　　　　　<meta name="google-adsense-account" content="ca-pub-6482338911393771">
 </head>
 <body>
     <header>
