--- a/game.html
+++ b/game.html
@@ -19,8 +19,7 @@
             margin: 0 auto;
         }
     </style>
-　　　　　　　<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
-     crossorigin="anonymous"></script>
+　　　　　　　　<meta name="google-adsense-account" content="ca-pub-6482338911393771">
 </head>
 <body>
     <h1>ブロック崩しゲーム</h1>
