--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
+     crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7NGG4PZ3R"></script>
 <script>
@@ -16,7 +18,6 @@
     <title>暇つぶしゲーム</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="google-site-verification" content="V_pG5Uqfmwc44h7g6EyyvBpVeOOiIIsiAFAUEyKFVFo" />
-　　　　　　　　<meta name="google-adsense-account" content="ca-pub-6482338911393771">
 </head>
 <body>
     <header>
