--- a/game.html
+++ b/game.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482338911393771"
+     crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7NGG4PZ3R"></script>
 <script>
@@ -19,7 +21,6 @@
             margin: 0 auto;
         }
     </style>
-　　　　　　　　<meta name="google-adsense-account" content="ca-pub-6482338911393771">
 </head>
 <body>
     <h1>ブロック崩しゲーム</h1>
