--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
         <!-- 他のゲームへのリンクもここに追加 -->
     </main>
 
+    <!-- サイトマップの追加 -->
+    <section id="sitemap">
+        <h2>サイトマップ</h2>
+        <ul>
+            <li><a href="index.html">トップページ</a></li>
+            <li><a href="game.html">ゲームページ</a></li>
+            <li><a href="YouTubeTrend.html">YouTube視聴ページ</a></li>
+        </ul>
+    </section>
+
     <footer>
         <p>&copy; 2023 暇つぶしゲーム</p>
     </footer>
